--- a/manifest.json
+++ b/manifest.json
@@ -36,7 +36,7 @@
           "hash": "XDSZWNw2LBm5q2pNUKEUHA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -48,7 +48,7 @@
           "hash": "8kOJVPpQQPr+yAe/v//Nvg=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -113,7 +113,7 @@
           "can_incremental": true,
           "incrementalPhase": "build",
           "total_file_count": 5,
-          "skipped_file_count": 3
+          "skipped_file_count": 5
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
