--- a/docfx_project/articles/toc.yml
+++ b/docfx_project/articles/toc.yml
@@ -1,2 +1,6 @@
-- name: Introduction
-  href: intro.md
+- name: 開發環境
+  href: 9999_000-開發環境.md
+- name: 技術文章
+  items:
+    - name: 隨手記
+      href: 9998_001.md
