--- a/docfx_project/toc.yml
+++ b/docfx_project/toc.yml
@@ -3,6 +3,7 @@
   homepage: Articles_TECH/index.md
 - name: 會計專業
   href: Articles_ACCOUNT
+  homepage: Articles_ACCOUNT/index.md
 - name: Api Documentation
   href: api/
   homepage: api/index.md
