--- a/manifest.json
+++ b/manifest.json
@@ -53,6 +53,18 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "Articles_TECH/202004/202004_003_WPF2Vue.md",
+      "output": {
+        ".html": {
+          "relative_path": "Articles_TECH/202004/202004_003_WPF2Vue.html",
+          "hash": "OoPXpGR3fibhnPNpG6XklQ=="
+        }
+      },
+      "is_incremental": false,
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "Articles_TECH/9998_001.md",
       "output": {
         ".html": {
@@ -69,7 +81,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/9999_000-開發環境.html",
-          "hash": "MTkRRP+drD5zb0X9nB2edw=="
+          "hash": "MzzqXGpCfaWKLIxLZDVZYw=="
         }
       },
       "is_incremental": true,
@@ -96,7 +108,7 @@
           "hash": "NbmqwkXY8Mp/HA2PYheV7w=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -117,7 +129,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/toc.html",
-          "hash": "x6nV+F1Ud7kBYe+nVisHYg=="
+          "hash": "h6FsLm1uYeUfxVgY0V0Hpw=="
         }
       },
       "is_incremental": false,
@@ -163,8 +175,8 @@
         "ConceptualDocumentProcessor": {
           "can_incremental": true,
           "incrementalPhase": "build",
-          "total_file_count": 9,
-          "skipped_file_count": 8
+          "total_file_count": 10,
+          "skipped_file_count": 9
         },
         "TocDocumentProcessor": {
           "can_incremental": false,
