--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "homepages": [],
-  "source_base_path": "C:/_TOHU/_Blog/EzTool.github.io/docfx_project",
+  "source_base_path": "C:/_TOHU/Blog/EzTool.github.io/docfx_project",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -9,10 +9,10 @@
       "output": {
         ".html": {
           "relative_path": "Articles_ACCOUNT/index.html",
-          "hash": "z494C7RhOcwUVNjVU6bIPw=="
+          "hash": "/JqlwMamxCUDDAgkfyK2Eg=="
         }
       },
-      "is_incremental": true,
+      "is_incremental": false,
       "version": ""
     },
     {
@@ -33,7 +33,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/202004/202004_001_側錄StoredProcedure呼叫.html",
-          "hash": "v46jDLnaxh2fZejasotMYQ=="
+          "hash": "T15cFsILe9rs3zKywuZxyA=="
         }
       },
       "is_incremental": true,
@@ -45,7 +45,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/202004/202004_002_學習能力.html",
-          "hash": "bLHhzK4t5TPFqUIqUf/pog=="
+          "hash": "yk/O0dyMuF6Fmytb3pYl+Q=="
         }
       },
       "is_incremental": true,
@@ -57,10 +57,10 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/202004/202004_003_WPF2Vue.html",
-          "hash": "OoPXpGR3fibhnPNpG6XklQ=="
+          "hash": "ehNxoa0eMM+wAM6VIO3DjA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -69,7 +69,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/9998_001.html",
-          "hash": "kEWrrRhbQYxtb6Xn754EWQ=="
+          "hash": "8HfJTz+Czvwjuz27rp1axw=="
         }
       },
       "is_incremental": true,
@@ -81,7 +81,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/9999_000-開發環境.html",
-          "hash": "MzzqXGpCfaWKLIxLZDVZYw=="
+          "hash": "w8tllabggz+5ncLYLe34fQ=="
         }
       },
       "is_incremental": true,
@@ -93,7 +93,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/DocFX/999_快速開始.html",
-          "hash": "/61Ni4K2cdjhiLZYP9hyfA=="
+          "hash": "4+lvK1DhoJaYH8gvk9PY8A=="
         }
       },
       "is_incremental": true,
@@ -105,7 +105,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/System/999_001.html",
-          "hash": "NbmqwkXY8Mp/HA2PYheV7w=="
+          "hash": "6stt4CTC8G32ubKJFHCs4Q=="
         }
       },
       "is_incremental": true,
@@ -117,7 +117,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/index.html",
-          "hash": "TI4JLnE3F3nKMhV6bTSjuA=="
+          "hash": "lHMMwBnGlturtmU47gOmOg=="
         }
       },
       "is_incremental": true,
@@ -141,7 +141,7 @@
       "output": {
         ".html": {
           "relative_path": "index.html",
-          "hash": "dWKkbI/cVP1out+aqAvukg=="
+          "hash": "43qvv3JQGwv+wRe8KgAIhw=="
         }
       },
       "is_incremental": true,
