--- a/docfx_project/Articles_TECH/toc.yml
+++ b/docfx_project/Articles_TECH/toc.yml
@@ -2,15 +2,21 @@
   items:
     - name: 001-需求的條件
       href: System\999_001.md
-- name: DocFX
+- name: 開發環境
+  href: 9999_000-開發環境.md
+- name: 工具箱
   items:
+    - name: Visual Studio SCode
+      href: Tools\VSCode\_index.md
+      items:
+        - name: 常用擴展
+          href: Tools\VSCode\Extension.md
     - name: DocFX-快速開始
-      href: DocFX\999_快速開始.md
+      href: Tools\DocFX\999_快速開始.md
+    
 - name: 技術文章
   items:      
     - name: 從 WPF 到 Vue.js
       href: 202004\202004_003_WPF2Vue.md
     - name: 隨手記
       href: 9998_001.md
-- name: 開發環境
-  href: 9999_000-開發環境.md
