--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_ACCOUNT/index.html",
-          "hash": "c4Ps2uvEfgJ+ctiEK/bLzw=="
+          "hash": "jUWm+F8XXscob5bcTuq6eA=="
         }
       },
       "is_incremental": true,
@@ -36,7 +36,7 @@
           "hash": "v46jDLnaxh2fZejasotMYQ=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -48,7 +48,7 @@
           "hash": "bLHhzK4t5TPFqUIqUf/pog=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -60,7 +60,7 @@
           "hash": "OoPXpGR3fibhnPNpG6XklQ=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -72,7 +72,7 @@
           "hash": "WaL2hMkbSX8GzY/8sqg7CA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -81,7 +81,7 @@
       "output": {
         ".html": {
           "relative_path": "Articles_TECH/9999_000-開發環境.html",
-          "hash": "MzzqXGpCfaWKLIxLZDVZYw=="
+          "hash": "P6V7qfxl76JsePfz8cRR1Q=="
         }
       },
       "is_incremental": false,
@@ -96,7 +96,7 @@
           "hash": "NbmqwkXY8Mp/HA2PYheV7w=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -108,7 +108,7 @@
           "hash": "vl4TZmRfJ0tMXhNakVi4LA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -120,7 +120,7 @@
           "hash": "wwEmhitgrqZJuVThw6QYdA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -132,7 +132,7 @@
           "hash": "fe7YiMcWH/SVnHsXEDlXQw=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
@@ -144,7 +144,7 @@
           "hash": "TI4JLnE3F3nKMhV6bTSjuA=="
         }
       },
-      "is_incremental": false,
+      "is_incremental": true,
       "version": ""
     },
     {
