--- a/docfx_project/Articles_TECH/toc.yml
+++ b/docfx_project/Articles_TECH/toc.yml
@@ -4,11 +4,13 @@
       href: System\999_001.md
 - name: 工具箱
   items:
+    - name: 測試工具地圖
+      href: Tools\TestTools.md
     - name: Visual Studio
       items:
         - name: 常用擴展
           href: Tools\VisualStudio\Extension.md
-    - name: Visual Studio SCode
+    - name: Visual Studio Code
       homepage: Tools\VSCode\index.md      
       items:
         - name: 常用擴展
